--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
-PORT=5000
-MONGO_URI=mongodb+srv://JinpengZhang:991212Zhang@cluster0.rw5bz.mongodb.net/cise_ass1_worksheet3?retryWrites=true&w=majority
+PORT=8082
+MONGO_URI=mongodb+srv://Jinpeng:19991212@assessmentb.idoom.mongodb.net/cise_ass1b?retryWrites=true&w=majority
 MODE_ENV=production
