--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,5 @@ jobs:
           heroku_api_key: da18e136-f13b-4bba-a95b-520a87a9e755
           heroku_app_name: "secure-fjord-48566" #Must be unique in Heroku
           heroku_email: "jpzhang1999@gmail.com"
+          appdir: "cise_ass1b" 
+          procfile: "web:node cise_ass1b/server.js"
