--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "app": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "npm run install-client && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm run-script build",
+    "client": "cd client && npm start --prefix client"
   },
   "repository": {
     "type": "git",
