--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "cd client && npm install && npm run-script build",
+    "heroku-postbuild": "cd client && npm install --prefix frontend && npm run-script build --prefix frontend",
     "client": "cd client && npm start --prefix client"
   },
   "repository": {
