--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "mern app",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "cd client && npm install && npm run build",
+    "heroku-postbuild": "cd client && npm install && npm run-script build",
     "client": "cd client && npm start --prefix client"
   },
   "repository": {
